# rust-rest-api-basic

./: .env.example  Cargo.toml  README.md
database/: schema.sql
src/: main.rs  state.rs
src/controllers/: users.rs
src/db/: connection.rs  mod.rs
src/db/entities/: users.rs
src/dtos/: create_user.rs  mod.rs  update_user_by_id.rs
src/handlers/: users.rs
src/repositories/: users.rs
src/response_handling/: endpoint_response.rs  errors.rs  mod.rs
src/routers/: users.rs
src/services/: users.rs
