[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.49", features = ["full"] }
dotenvy = { version = "0.15.7" }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
